# sym-modeling

./: .gitignore  README.md  environment.yml  pyproject.toml  tutorial.py
configs/: sparta_config.json
configs/sgep/: gt.json  hw.json  ih.json  nh2.json  nh4.json
configs/sgeppy/: gt*.json  gt.json  hw.json  ih.json  nh2.json  nh4.json
dataset/fem_data/plate_hole_fenics/GT/: debug_fields.h5  displacement.h5  reactions.csv  summary.json
dataset/fem_data/plate_hole_fenics/GT/10/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/20/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/30/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/40/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/50/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/60/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/70/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/GT/80/: output_elements.csv  output_nodes.csv  output_reactions.csv
dataset/fem_data/plate_hole_fenics/HW/: debug_fields.h5  displacement.h5  displacement.xdmf  quarter_plate_hole.msh  reactions.csv  summary.json
dataset/fem_data/plate_hole_fenics/HW/10/: output_elements.csv  (+2 more)
dataset/fem_data/plate_hole_fenics/IH/: debug_fields.h5  debug_fields.xdmf  displacement.h5  reactions.csv  summary.json
dataset/fem_data/plate_hole_fenics/NH2/: debug_fields.h5  displacement.h5  reactions.csv  summary.json
dataset/fem_data/plate_hole_fenics/NH4/: debug_fields.h5  debug_fields.xdmf  displacement.h5  displacement.xdmf  reactions.csv  summary.json
dataset/fem_data/plate_hole_fenics/mesh/: mesh.geo
docs/: README.md  fem-data-format.md  fem-discovery-methods.md  fem-overview.md
scripts/: plot_sgep_pareto.py  run_sgep_epsilon_sweep.py  run_sgeppy_weak_noise_sweep.py
src/sym_modeling/: __init__.py
src/sym_modeling/common/: __init__.py  base_model.py  logging.py  mesh.py  metadata.py  regression.py  tensor_ops.py  workflow.py
src/sym_modeling/domains/: __init__.py
src/sym_modeling/domains/cfd/: __init__.py  coord_mapping.py  data.py  operators.py  preprocessing.py  transfer.py
src/sym_modeling/domains/fem/: __init__.py  data.py  dolfinx.py  forward_benchmark.py  imports.py  runtime.py
tests/: test_architecture.py  test_euclid_model_naming.py  test_fem_common_methods.py  test_fem_dolfinx_api.py  test_fem_forward_benchmark_api.py  test_fem_hyperelastic_export.py  test_sgep_core.py  test_sgeppy_core.py
(+116 files in other folders)
