[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sym-modeling"
version = "0.1.0"
description = "Domain-separated symbolic modeling toolkit for CFD and FEM workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
]

[project.optional-dependencies]
cfd = [
    "foamlib>=1.3.21",
]
fem = [
    "matplotlib>=3.5",
    "seaborn>=0.11",
]
viz = [
    "matplotlib>=3.7",
    "pyvista>=0.44.2",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
