[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sym-modeling"
version = "0.1.0"
description = "Domain-separated symbolic modeling toolkit for CFD and FEM workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geppy>=0.1.3",
    "graphviz>=0.21",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "setuptools>=68,<81",
    "sympy>=1.14.0",
]

[project.scripts]
sym-fem-sgeppy = "sym_modeling.domains.fem.methods.sgeppy.run_gep_sparse:main"

[project.optional-dependencies]
cfd = [
    "foamlib>=1.3.21",
]
fem = [
    "gmsh>=4.13",
    "matplotlib>=3.5",
    "seaborn>=0.11",
]
jax_fem = [
    "jax[cuda13]>=0.4.30",
    "jax-fem>=0.0.11",
    "pyfiglet>=1.0",
]
viz = [
    "imageio>=2.34",
    "matplotlib>=3.7",
    "pyvista>=0.44.2",
]
dev = [
    "jupyterlab>=4.5.7",
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
